final fix for button overlap

--- a/App/scss/_buttonContainer.scss
+++ b/App/scss/_buttonContainer.scss
@@ -1,9 +1,9 @@
 #buttonContainer {
   padding: 2rem;
-  height: 75%;
-  max-height: 500px;
+  height: 61%;
+  max-height: 430px;
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 0.8rem;
   grid-template-columns: auto auto auto auto;
   background-color: $veryDarkDesaturatedBlueScreen;
   border-radius: 10px;
